xedoc-rs/tui-composer/src/bottom_pane/snapshots/xedoc_tui_composer__bottom_pane__chat_composer__tests__footer_collapse_plan_empty_mode_cycle_without_context.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"╭──────────────────────────────────────────╮"
"│❯ Ask Xedoc to do anything                │"
"│                                          │"
"│                                          │"
"│                                          │"
"│                                          │"
"│                                          │"
"╰──────────────────────────────────────────╯"
"  Plan mode (shift+tab to cycle)            "
